Specify docker containers on config level

--- a/conf/base.config
+++ b/conf/base.config
@@ -22,13 +22,12 @@ process {
   maxErrors = '-1'
 
   // Process-specific resource requirements
-  $fastqc {
-    errorStrategy = { task.exitStatus in [143,137] ? 'retry' : 'ignore' }
+  //Different container provided from ICGC/TCGA directly
+  .withName:fetch_encrypted_s3_url {
+    container = 'overture/score'
   }
-  $multiqc {
-    executor = 'local'
-    errorStrategy = { task.exitStatus in [143,137] ? 'retry' : 'ignore' }
-  }
+
+
 }
 
 params {
