Cleaned nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,16 +11,13 @@
 // Global default params, used in configs
 params {
 
-  version = "1.0.0" // Pipeline version
-  container = 'icgc-featurecounts:1.0.0' // Container slug. Stable releases should specify release tag!
+  version = "1.0.0dev" // Pipeline version
+  container = 'nf-core/icgc-featurecounts:1.0.0dev' // Container slug. Stable releases should specify release tag!
   nf_required_version = '0.30.2' // Minimum version of nextflow required
 
   help = false
-  reads = "data/*{1,2}.fastq.gz"
-  singleEnd = false
   outdir = './results'
   igenomes_base = "./iGenomes"
-  clusterOptions = false
 }
 
 profiles {
@@ -37,7 +34,9 @@ profiles {
     includeConfig 'conf/base.config'
     includeConfig 'conf/aws.config'
   }
-  
+  awsbatch {
+    includeConfig 'conf/base.config'
+  }
   test {
     includeConfig 'conf/base.config'
     includeConfig 'conf/test.config'
@@ -69,8 +68,8 @@ dag {
 }
 
 manifest {
-  homePage = 'https://github.com/apeltzer/ICGC-FeatureCounts'
-  description = 'This pipeline takes some BAM files from ICGC and runs featureCounts on them.'
+  homePage = 'https://github.com/nf-core/ICGC-FeatureCounts'
+  description = 'This pipeline can be used to analyse RNAseq data on ICGC with AWS/AWSBatch'
   mainScript = 'main.nf'
 }
 
