Fixing linting errors

--- a/conf/base.config
+++ b/conf/base.config
@@ -23,7 +23,7 @@ process {
 
   // Process-specific resource requirements
   //Different container provided from ICGC/TCGA directly
-  .withName:fetch_encrypted_s3_url {
+  $fetch_encrypted_s3_url {
     container = 'overture/score'
   }
 
