--- a/nextflow.config
+++ b/nextflow.config
@@ -26,10 +26,13 @@ profiles {
     includeConfig 'conf/base.config'
   }
   conda { process.conda = "$baseDir/environment.yml" }
+
   docker { docker.enabled = true }
+
   singularity {
     includeConfig 'conf/singularity.config'
   }
+
   aws {
     includeConfig 'conf/base.config'
     includeConfig 'conf/aws.config'
@@ -69,7 +72,7 @@ dag {
 
 manifest {
   homePage = 'https://github.com/nf-core/ICGC-FeatureCounts'
-  description = 'This pipeline can be used to analyse RNAseq data on ICGC with AWS/AWSBatch'
+  description = 'This pipeline can be used to analyse RNAseq data on ICGC with AWS or AWSBatch'
   mainScript = 'main.nf'
 }
 
