Fix for Singularity containers

--- a/conf/singularity.config
+++ b/conf/singularity.config
@@ -11,4 +11,4 @@ singularity {
   enabled = true
 }
 
-process.container = 'shub://ICGC-FeatureCounts'
+process.container = 'shub://nf-core/ICGC-featureCounts'
