--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@
 params {
 
   version = "1.0.0dev" // Pipeline version
-  container = 'nf-core/icgc-featurecounts:1.0.0dev' // Container slug. Stable releases should specify release tag!
+  container = 'nf-core/icgc-featurecounts:latest' // Container slug. Stable releases should specify release tag!
   nf_required_version = '0.30.2' // Minimum version of nextflow required
 
   help = false
