--- a/conf/base.config
+++ b/conf/base.config
@@ -33,7 +33,7 @@ process {
 
 params {
   // Defaults only, expecting to be overwritten
-  max_memory = 6.GB
+  max_memory = 800.MB
   max_cpus = 1
   max_time = 240.h
   igenomes_base = 's3://ngi-igenomes/igenomes/'
