Added required profiles for AWSBatch

--- a/nextflow.config
+++ b/nextflow.config
@@ -39,6 +39,8 @@ profiles {
   }
   awsbatch {
     includeConfig 'conf/base.config'
+    includeConfig 'conf/awsbatch.config'
+    includeConfig 'conf/docker.config'
   }
   test {
     includeConfig 'conf/base.config'
