Test Profile AWSBatch

--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -13,7 +13,7 @@ executor.awscli = '/home/ec2-user/miniconda/bin/aws'
 
 process {
   executor = 'awsbatch'
-  queue = 'icgc-job-queue'
+  queue = 'SFB209_Hailfinger_APeltzer_Test'
 
   errorStrategy = {task.exitStatus == 143 ? 'retry' : 'terminate'}
   maxErrors = '-1'
