Fixing piperuns for S3 access

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,19 +57,19 @@ process.shell = ['/bin/bash', '-euo', 'pipefail']
 
 timeline {
   enabled = true
-  file = "${params.outdir}/pipeline_info/ICGC-FeatureCounts_timeline.html"
+  file = "./piperun/pipeline_info/ICGC-FeatureCounts_timeline.html"
 }
 report {
   enabled = true
-  file = "${params.outdir}/pipeline_info/ICGC-FeatureCounts_report.html"
+  file = "./piperun/pipeline_info/ICGC-FeatureCounts_report.html"
 }
 trace {
   enabled = true
-  file = "${params.outdir}/pipeline_info/ICGC-FeatureCounts_trace.txt"
+  file = "./piperun/pipeline_info/ICGC-FeatureCounts_trace.txt"
 }
 dag {
   enabled = true
-  file = "${params.outdir}/pipeline_info/ICGC-FeatureCounts_dag.svg"
+  file = "./piperun/pipeline_info/ICGC-FeatureCounts_dag.svg"
 }
 
 manifest {
