Add default parameters to strandedness

--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,10 @@ params {
   container = 'nfcore/icgc-featurecounts:latest' // Container slug. Stable releases should specify release tag!
   nf_required_version = '0.30.2' // Minimum version of nextflow required
 
+  forward_stranded = false
+  reverse_stranded = false
+  unstranded = false
+
   help = false
   outdir = './results'
   igenomes_base = "./iGenomes"
