--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
 
 before_install:
   # Pull the docker image first so the test doesn't wait for this
-  - docker pull nf-core/icgc-featurecounts:1.0.0dev
+  - docker pull nfcore/icgc-featurecounts:latest
 
 install:
   # Install Nextflow
