--- a/conf/test.config
+++ b/conf/test.config
@@ -12,9 +12,8 @@ params {
   max_memory = 6.GB
   max_time = 48.h
   // Input data
-  singleEnd = false
-  readPaths = [
-    ['Testdata', ['https://github.com/nf-core/test-datasets/raw/exoseq/testdata/Testdata_R1.tiny.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/exoseq/testdata/Testdata_R2.tiny.fastq.gz']],
-    ['SRR389222', ['https://github.com/nf-core/test-datasets/raw/methylseq/testdata/SRR389222_sub1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/methylseq/testdata/SRR389222_sub2.fastq.gz']]
-  ]
+  manifest = 'https://raw.githubusercontent.com/nf-core/test-datasets/icgc-featurecounts/testdata/manifest.tsv'
+  gtf = 's3://ngi-igenomes/igenomes/Homo_sapiens/Ensembl/GRCh37/Annotation/Genes/genes.gtf'
+  accesstoken = '78824-test-12345'
+  test = true
 }
