--- a/nextflow.config
+++ b/nextflow.config
@@ -48,6 +48,7 @@ profiles {
   }
   test {
     includeConfig 'conf/base.config'
+    includeConfig 'conf/docker.config'
     includeConfig 'conf/test.config'
   }
   none {
