Cleaned up available configurations

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,7 +21,6 @@ params {
 
   help = false
   outdir = './results'
-  igenomes_base = "./iGenomes"
 }
 
 profiles {
@@ -30,18 +29,14 @@ profiles {
     includeConfig 'conf/base.config'
   }
   
-  conda { process.conda = "$baseDir/environment.yml" }
-
-  docker { docker.enabled = true }
+  docker { 
+    includeConfig 'conf/docker.config'
+  }
 
   singularity {
     includeConfig 'conf/singularity.config'
   }
 
-  aws {
-    includeConfig 'conf/base.config'
-    includeConfig 'conf/aws.config'
-  }
   awsbatch {
     includeConfig 'conf/base.config'
     includeConfig 'conf/awsbatch.config'
