Cleaned up AWSBatch configuration

--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -7,17 +7,10 @@
  * Uses docker for software depedencies.
  */
 
-executor.name = 'awsbatch'
-executor.awscli = '/home/ec2-user/miniconda/bin/aws'
-
-
-process {
-  executor = 'awsbatch'
-  queue = 'SFB209_Hailfinger_APeltzer_Test'
-
-  errorStrategy = {task.exitStatus == 143 ? 'retry' : 'terminate'}
-  maxErrors = '-1'
-  maxRetries = 2
-  cpus = 2
-  memory = 7.GB
-}
+batch {
+    workDir = 's3://cbcrg-eu/work'
+    process.executor = 'awsbatch'
+    process.queue = 'SFB209_Hailfinger_APeltzer_Test'
+    executor.awscli = '/home/ec2-user/miniconda/bin/aws'
+    aws.region = 'us-east-1'    
+  }
