--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -8,7 +8,7 @@
  */
 
 batch {
-    workDir = 's3://cbcrg-eu/work'
+    workDir = 's3://hailfinger-icgc-testrun/work'
     process.executor = 'awsbatch'
     process.queue = 'SFB209_Hailfinger_APeltzer_Test'
     executor.awscli = '/home/ec2-user/miniconda/bin/aws'
