Fix request of resources for worfklow_summary-mqc

--- a/conf/base.config
+++ b/conf/base.config
@@ -27,6 +27,11 @@ process {
     container = 'overture/score'
   }
 
+  withName:workflow_summary_mqc{
+    memory = 800.MB
+    cpus = 1
+  }
+
 
 
 }
