--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -14,3 +14,7 @@ batch {
     executor.awscli = '/home/ec2-user/miniconda/bin/aws'
     aws.region = 'us-east-1'    
   }
+
+executor {
+  awscli = '/home/ec2-user/miniconda/bin/aws'
+}
