Generalized AWSBatch configuration - now accessible via parameter settings

--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -8,10 +8,10 @@
  */
 
 batch {
-    workDir = 's3://hailfinger-icgc-testrun/work'
+    workDir = params.workDir
     process.executor = 'awsbatch'
-    process.queue = 'SFB209_Hailfinger_APeltzer_Test'
-    aws.region = 'us-east-1'    
+    process.queue = params.awsqueue
+    aws.region = params.awsregion    
   }
 
 executor {
