--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,11 @@ params {
 
   help = false
   outdir = './results'
+
+  //Default values for AWSBatch (Queue, Region, Workdir)
+  awsqueue = false
+  awsregion = 'us-east-1'
+  workDir = './work'
 }
 
 profiles {
