--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,8 @@
-name: nfcore-icgc-featurecounts-1.0.0dev
+name: nfcore-icgc-featurecounts-1.0.0
 channels:
   - bioconda
   - conda-forge
   - defaults
 dependencies:
   - subread=1.6.2
-  - multiqc=1.5
+  - multiqc=1.6
