adjusted config files

--- a/conf/awsbatch.config
+++ b/conf/awsbatch.config
@@ -8,10 +8,10 @@
  */
 
 batch {
-    workDir = params.workDir
     process.executor = 'awsbatch'
-    process.queue = params.awsqueue
-    aws.region = params.awsregion    
+    awsqueue = 'nextflow-batch'
+    awsregion = 'us-west-2'
+    workDir = 's3://aws-genomics-nextflow/'
   }
 
 executor {
