--- a/conf/base.config
+++ b/conf/base.config
@@ -43,3 +43,15 @@ params {
   max_time = 240.h
   igenomes_base = 's3://ngi-igenomes/igenomes/'
 }
+
+
+
+cloud {
+  imageId = 'ami-7c97d804'
+  instanceType = 't2.micro'
+  keyName = 'alper-uswest2-keypair'
+  userName = 'ec2-user'
+  securityGroup = 'sg-8b3100fa'
+}
+
+
