--- a/nextflow.config
+++ b/nextflow.config
@@ -23,9 +23,10 @@ params {
   outdir = './results'
 
   //Default values for AWSBatch (Queue, Region, Workdir)
-  awsqueue = false
-  awsregion = 'us-east-1'
-  workDir = './work'
+  // defined in awsbatch config file
+ // awsqueue = false
+ // awsregion = 'us-east-1'
+ // workDir = './work'
 }
 
 profiles {
