cloud info sould be in main conf

--- a/nextflow.config
+++ b/nextflow.config
@@ -104,3 +104,12 @@ def check_max(obj, type) {
     }
   }
 }
+
+cloud {
+  imageId = 'ami-7c97d804'
+  instanceType = 't2.micro'
+  keyName = 'alper-uswest2-keypair'
+  userName = 'ec2-user'
+  securityGroup = 'sg-8b3100fa'
+}
+
